# rl-agent-tutor

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  restart.sh
deploy/: Dockerfile  README.md  com.rlagent.daemon.plist  com.rlagent.web.plist  docker-compose.yml  install-native.sh  rl-agent-daemon.service  rl-agent-web.service
docs/: DEPLOYMENT-MODES.md  PRD.md  README.md  REFACTOR-SUMMARY.md  TECH-DESIGN.md  architecture.md
scripts/: __init__.py  build_static.py
src/rl_agent_tutor/: __init__.py  archivist.py  cli.py  config.py  courseware.py  courseware_export.py  courseware_extractor.py  courseware_generator.py  courseware_renderer.py  courseware_schema.py  deployment.py  examiner.py  fetchers.py  indexer.py  librarian.py  llm.py  models.py  orchestrator.py  planner.py  practice.py  rag.py  reviewer.py  scheduler.py  server.py  storage.py  store.py  tutor.py  utils.py  workspaces.py
src/rl_agent_tutor/routes/: dashboard.py  knowledge.py  learning.py  library.py  study.py  testing.py  workspaces.py
src/rl_agent_tutor/services/: __init__.py  dashboard.py  evidence.py  knowledge.py  learning.py  resources.py  testing.py  weakness.py  workflow.py
tests/: README.md  conftest.py  smoke_test.py  test_units.py
tests/api/: test_capability_regression.py  test_routes.py
tests/unit/: test_courseware.py  test_dashboard_service.py  test_evidence.py  test_knowledge_service.py  test_learning_service.py  test_resources_service.py  test_sources.py  test_static_build.py  test_storage.py  test_testing_service.py  test_workflow.py
(+18 files in other folders)
